--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -226,10 +226,20 @@
 							ng: function(data) {
 								waiting.close();
 								canClick = true;
+								switch(data) {
+									case "2013":
+										mui.toast(TextMessage.email_error, {
+											duration: 'long',
+											type: 'div'
+										})
+										break;
+									default:
 								mui.toast(TextMessage.send_code_ng, {
 									duration: 'long',
 									type: 'div'
 								})
+										break;
+								}
 							},
 							error: function() {
 								canClick = true;
@@ -256,7 +266,6 @@
 								Log.i("register ok");
 								waiting.close();
 								plus.storage.setItem('LoginFlag', 'isLogin');
-								loginFlg = true;
 								mui.back();
 							},
 							ng: function(data) {
